# BLT-Lettuce

./: .env  .env.sample  .gitignore  .pre-commit-config.yaml  .secrets.sample  DEPLOYMENT.md  MIGRATION.md  README.md  app.py  conftest.py  manifest.yaml  nixpacks.toml  permissions_allowed.md  projects.json  pyproject.toml  repo.json  requirements-dev.txt  schema.sql  tempCodeRunnerFile.py  terms.html  wrangler.toml  wsgi.py
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: ci-cd.yaml  deploy-pages.yaml  pre-commit-autofix.yaml  refresh-stats.yaml  test.yml
.wrangler/cache/: cf.json
blt-bot/: app.py  local_settings.py
cloudflare-worker/: DEPLOYMENT.md  README.md  project_recommender.py  worker.py  wrangler.toml
data/: ephemeral-T070JPE5BQQ-C077QBBLY1Z.md  message-T070JPE5BQQ-C06V9S85YR1.md  projects.json  projects_metadata.json  repos.json  stats.json
docs/: CNAME  index.html  project-recommendation-implementation.md  slack-bot-flowchart.html  slack-bot-flowchart.md
examples/: recommend_projects.py
migrations/: 0001_create_slack_tables.sql  001_initial.sql  002_workspace_counts.sql  003_workspace_invite_link.sql  004_events_channel_id.sql  005_events_webhook_fields.sql  006_conversation_states.sql
scripts/: enrich_projects.py  fetch_blt_projects.py  fetch_owasp_projects.py  migrate.py  requirements.txt  scrape_stats.py  setup-env.py
src/: local_settings.py  worker.py  workspace_welcome_message_T070JPE5BQQ.txt
src/data/: message-T070JPE5BQQ-C077QBBLY1Z-ephemeral.md
src/lettuce/: __init__.py  conversation_manager.py  html_templates.py  project_recommender.py  recommendation_engine.py  sentry.py
src/lettuce/plugins/: demo.py  handle_messages.py  poll.py  project.py  projects.py  recommendations.py  repo.py  startup_message.py  update_server.py  welcome.py
src/lettuce/plugins/welcome/: welcome.py  welcome_message.txt
src/lettuce/templates/: 404.html  500.html  dashboard.html  dashboard_workspace_section.html  homepage.html  login.html  manifest_checker.html  privacy.html  status.html  sub-processors.html  terms.html  workspace_detail.html
tests/: conftest.py  js.py  test_blt_api_client.py  test_commands.py  test_conversation_manager.py  test_project_recommender.py  test_recommendations.py  test_welcome_command.py  test_welcome_plugin.py  test_worker_utils.py
tests/plugins/: test_handle_messages.py  test_project.py  test_repo.py
