[tool.poetry]
name = "lettuce-blt"
version = "0.1.0"
description = ""
authors = ["OWASP BLT Team", "Sarthak5598 <sarthak5598sharma@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
ruff = "^0.4.8"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"

[tool.isort]
known_first_party = ["tests"]
line_length = 99
multi_line_output = 3
profile = "black"

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E5", "E7", "E9", "F", "N", "W"]

[tool.ruff.lint.flake8-errmsg]
max-string-length = 99

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
